# infra-public

./: .gitignore  CLAUDE.md  pyproject.toml
aws/: .gitignore  account.auto.tf  tfstate.auto.tf
aws/prod/sigsrv-nas/: account.tfvars  account.yaml
aws/prod/sigsrv-net/: account.tfvars  account.yaml
aws/prod/sigsrv-tf/: account.tfvars
aws/prod/sigsrv-web/: account.tfvars  account.yaml
aws/root/: account.tfvars
aws/root/apps/controltower_controls/: .terraform.lock.hcl  account.auto.tf  config.tf  main.tf  terraform.tf  (+1 more)
aws/sdlc/sigsrv-dev/: account.tfvars  account.yaml
clusters/modules/talos/: .gitignore
clusters/prod/p1/: .envrc
clusters/prod/sigsrv-prod/: .envrc
clusters/prod/t1/: .envrc  TODO.md
clusters/sdlc/default/: default.tf
clusters/sdlc/talos-dev/: controlplane.yaml  main.tf
clusters/shared/incus/: .terraform.lock.hcl  main.tf  terraform.tf  terraform.tfvars  tfstate.auto.tf  tfstate.tf
incus/: tfstate.auto.tf
incus/cluster/: .terraform.lock.hcl  main.tf  terraform.tf  tfstate.auto.tf  tfstate.tf  variables.tf
modules/aws/metadata/: main.tf  outputs.tf
modules/metadata/: main.tf  outputs.tf
modules/my_public_ip/: outputs.tf
nix/: flake.nix
projects/ec2_key_pair/: main.tf  outputs.tf
projects/kms/: outputs.tf
projects/kms/config/: prod.yaml
projects/null/: metadata.tf
projects/vpc_nat_instance/: main.tf  outputs.tf
root/ryzen/k3s/: k3s_lxd.tf  k3s_setup.py  ufw_setup.txt
root/ryzen/lxd/: config.full.yaml  config.yaml
root/ryzen/microk8s/: lxd.tf  lxd_setup.py  ufw_setup.txt
root/zen/lxd/: config.full.yaml
root/zen/tailscale/: policy.json5
tools/: lxc.py
workloads/prod/nas/: account.yaml
workloads/sdlc/ryzen/kubernetes/apps/gpt-bot/: 1password.env  Dockerfile  hello.py  pyproject.toml
workloads/sdlc/ryzen/kubernetes/apps/gpt-bot/gpt_bot/: discord.py
zen/root/incus/: config.full.yaml  config.yaml
zen/root/lxd/: config.full.yaml  config.yaml
zen/root/ufw/: rules.txt  ufw-export
zen/sdlc/default/: .terraform.lock.hcl  default.tf  nixos-test.nix
zen/sdlc/talos-dev/: .terraform.lock.hcl  worker.yaml
(+625 files in other folders)
