[tool.poetry]
name = "sigsrv-infra"
version = "1.0.0"
description = ""
authors = ["EcmaXp <ecmaxp@ecmaxp.kr>"]
exclude = ["**/*"]
classifiers = ["Private :: Do not Upload"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.28.58"
kubernetes = "^29.0.0"
pylxd = "^2.3.1"
setuptools = "^69.0.3"
cdk8s = "^2.68.27"
cdk8s-plus-27 = "^2.7.73"

[tool.poetry.group.dev.dependencies]
boto3-stubs-lite = {extras = ["all"], version = "^1.28.58"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
