[project]
name = "sigsrv-infra"
version = "1.0.0"
description = ""
authors = [{ name = "EcmaXp", email = "ecmaxp@ecmaxp.kr" }]
requires-python = "~=3.12"
classifiers = ["Private :: Do not Upload"]
dependencies = [
    "boto3>=1.34.23",
    "cdk8s>=2.68.27",
    "cdk8s-plus-27>=2.7.73",
    "kubernetes>=29.0.0",
    "pylxd>=2.3.2",
]

[tool.hatch.build.targets.sdist]
exclude = ["**/*"]

[tool.hatch.build.targets.wheel]
exclude = ["**/*"]

[dependency-groups]
dev = [
    "boto3-stubs-lite[all]>=1.38.13",
]
